# nunzio

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Containerfile  README.md  healthcheck.py  initial_prompt.txt  pyproject.toml
deploy/: README.md  nunzio.container
scripts/: clear_and_reseed.py  create_tables.py  migrate_v03.py  migrate_v05.py  migrate_v07.py  migrate_v08.py  restore_data.sql  seed_exercises.py  seed_principles.py
src/nunzio/: __init__.py  bot.py  checkin.py  cli.py  config.py  core.py  main.py  stats.py
src/nunzio/database/: __init__.py  connection.py  models.py  repository.py
src/nunzio/llm/: __init__.py  client.py  context.py  schemas.py
tests/: test_active_model.py  test_body_weight.py  test_checkin.py  test_coaching.py  test_date_specification.py  test_db.py  test_defaults.py  test_delete_workout.py  test_edit_set.py  test_exercise_matching.py  test_expand_sets.py  test_llm_integration.py  test_log_personality.py  test_ollama.py  test_repeat_last.py  test_repeat_modifiers.py  test_reps_weight_swap.py  test_stats.py  test_timezone.py  test_weight_guards.py
